# eth-prototype

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TODO.md  config.example.toml  docker-compose.yml  rust-toolchain.toml
.cargo/: audit.toml
.github/workflows/: audit.yml  docker.yml  test.yml
bench/: README.md  main.rs  mod.rs
contrib/: docker-compose.yml
contrib/docker-entrypoint-initdb.d/: azimutt.sql
docs/: NOTES.md  TODO.md
examples/: main.rs  rpc.rs
sql/: base_mainnet.sql  binance_mainnet.sql  create_indexes.sql  ethereum_goerli.sql  ethereum_holesky.sql  ethereum_mainnet.sql  ethereum_rinkeby.sql  ethereum_ropsten.sql  ethereum_sepolia.sql  polygon_mainnet.sql  test.sql
src/: configs.rs  connection.rs  database.rs  eth.rs  lib.rs  mac.rs  main.rs  message.rs  networks.rs  types.rs  utils.rs
src/protocols/: constants.rs  eth.rs  les.rs  mod.rs
tests/: integration_tests.rs
